// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Structure/<ino-dialog> ClosingAction smoke-test 1`] = `
<div id="root-inner">
  <div class="story-dialog">
    <ino-button class="open-dialog-btn hydrated"
                data-dialog-id="demo-action-dialog"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Open Dialog
        </span>
      </button>
    </ino-button>
    <ino-dialog id="demo-action-dialog"
                open="false"
                fullwidth="false"
                dismissible="true"
                attach-to=".story-dialog"
                class="hydrated"
    >
      <div class="ino-dialog-header">
        <div class="ino-dialog-title">
          <h3>
            Select your favourite characters
          </h3>
        </div>
        <ino-icon-button icon="close"
                         data-ino-dialog-action="close"
                         class="ino-icon-button--color-scheme-primary hydrated"
        >
          <button class="mdc-icon-button mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
                  type="button"
                  style="--mdc-ripple-fg-size:0px; --mdc-ripple-fg-scale:NaN; --mdc-ripple-left:0px; --mdc-ripple-top:0px;"
          >
            <div class="mdc-icon-button__ripple">
            </div>
            <span class="mdc-icon-button__icon">
              <ino-icon class="ino-icon--color-scheme-primary hydrated">
              </ino-icon>
            </span>
          </button>
        </ino-icon-button>
      </div>
      <div class="ino-dialog-content">
        <ino-segment-group value="2"
                           id="dense-segment-grp"
                           class="ino-segment-group hydrated"
        >
          <ino-segment-button dense
                              value="1"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Morty
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="2"
                              class="ino-segment-button hydrated"
                              checked
          >
            <button class="button button--dense button--active">
              Pickle Rick
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="3"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Squanchy
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="4"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Beth
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="5"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Jerry
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="6"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Summer
            </button>
          </ino-segment-button>
        </ino-segment-group>
      </div>
      <div class="ino-dialog-footer">
        <ino-button icon="remove"
                    data-ino-dialog-action="cancel"
                    fill="outline"
                    color-scheme="secondary"
                    class="hydrated"
        >
          <button class="button button__variant--filled"
                  type="button"
          >
            <span class="button__label">
              Cancel
            </span>
          </button>
        </ino-button>
        <ino-button icon="mail"
                    data-ino-dialog-action="submit"
                    class="hydrated"
        >
          <button class="button button__variant--filled"
                  type="button"
          >
            <span class="button__label">
              Submit
            </span>
          </button>
        </ino-button>
      </div>
    </ino-dialog>
  </div>
</div>
`;

exports[`Structure/<ino-dialog> Dismissible smoke-test 1`] = `
<div id="root-inner">
  <div class="story-dialog">
    <ino-button class="open-dialog-btn hydrated"
                data-dialog-id="undefined"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Open Dialog
        </span>
      </button>
    </ino-button>
    <ino-dialog id="undefined"
                open="false"
                fullwidth="false"
                dismissible="true"
                attach-to=".story-dialog"
                class="hydrated"
    >
      <div class="ino-dialog-header">
        <div class="ino-dialog-title">
          <h3>
            Select your favourite characters
          </h3>
        </div>
        <ino-icon-button icon="close"
                         data-ino-dialog-action="close"
                         class="ino-icon-button--color-scheme-primary hydrated"
        >
          <button class="mdc-icon-button mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
                  type="button"
                  style="--mdc-ripple-fg-size:0px; --mdc-ripple-fg-scale:NaN; --mdc-ripple-left:0px; --mdc-ripple-top:0px;"
          >
            <div class="mdc-icon-button__ripple">
            </div>
            <span class="mdc-icon-button__icon">
              <ino-icon class="ino-icon--color-scheme-primary hydrated">
              </ino-icon>
            </span>
          </button>
        </ino-icon-button>
      </div>
      <div class="ino-dialog-content">
        <ino-segment-group value="2"
                           id="dense-segment-grp"
                           class="ino-segment-group hydrated"
        >
          <ino-segment-button dense
                              value="1"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Morty
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="2"
                              class="ino-segment-button hydrated"
                              checked
          >
            <button class="button button--dense button--active">
              Pickle Rick
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="3"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Squanchy
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="4"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Beth
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="5"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Jerry
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="6"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Summer
            </button>
          </ino-segment-button>
        </ino-segment-group>
      </div>
      <div class="ino-dialog-footer">
        <ino-button icon="remove"
                    data-ino-dialog-action="cancel"
                    fill="outline"
                    color-scheme="secondary"
                    class="hydrated"
        >
          <button class="button button__variant--filled"
                  type="button"
          >
            <span class="button__label">
              Cancel
            </span>
          </button>
        </ino-button>
        <ino-button icon="mail"
                    data-ino-dialog-action="submit"
                    class="hydrated"
        >
          <button class="button button__variant--filled"
                  type="button"
          >
            <span class="button__label">
              Submit
            </span>
          </button>
        </ino-button>
      </div>
    </ino-dialog>
  </div>
</div>
`;

exports[`Structure/<ino-dialog> FullWidth smoke-test 1`] = `
<div id="root-inner">
  <div class="story-dialog">
    <ino-button class="open-dialog-btn hydrated"
                data-dialog-id="undefined"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Open Dialog
        </span>
      </button>
    </ino-button>
    <ino-dialog id="undefined"
                open="false"
                fullwidth="true"
                dismissible="false"
                attach-to=".story-dialog"
                class="ino-dialog--fullwidth hydrated"
    >
      <div class="ino-dialog-header">
        <div class="ino-dialog-title">
          <h3>
            Select your favourite characters
          </h3>
        </div>
        <ino-icon-button icon="close"
                         data-ino-dialog-action="close"
                         class="ino-icon-button--color-scheme-primary hydrated"
        >
          <button class="mdc-icon-button mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
                  type="button"
                  style="--mdc-ripple-fg-size:0px; --mdc-ripple-fg-scale:NaN; --mdc-ripple-left:0px; --mdc-ripple-top:0px;"
          >
            <div class="mdc-icon-button__ripple">
            </div>
            <span class="mdc-icon-button__icon">
              <ino-icon class="ino-icon--color-scheme-primary hydrated">
              </ino-icon>
            </span>
          </button>
        </ino-icon-button>
      </div>
      <div class="ino-dialog-content">
        <ino-segment-group value="2"
                           id="dense-segment-grp"
                           class="ino-segment-group hydrated"
        >
          <ino-segment-button dense
                              value="1"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Morty
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="2"
                              class="ino-segment-button hydrated"
                              checked
          >
            <button class="button button--dense button--active">
              Pickle Rick
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="3"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Squanchy
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="4"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Beth
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="5"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Jerry
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="6"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Summer
            </button>
          </ino-segment-button>
        </ino-segment-group>
      </div>
      <div class="ino-dialog-footer">
        <ino-button icon="remove"
                    data-ino-dialog-action="cancel"
                    fill="outline"
                    color-scheme="secondary"
                    class="hydrated"
        >
          <button class="button button__variant--filled"
                  type="button"
          >
            <span class="button__label">
              Cancel
            </span>
          </button>
        </ino-button>
        <ino-button icon="mail"
                    data-ino-dialog-action="submit"
                    class="hydrated"
        >
          <button class="button button__variant--filled"
                  type="button"
          >
            <span class="button__label">
              Submit
            </span>
          </button>
        </ino-button>
      </div>
    </ino-dialog>
  </div>
</div>
`;

exports[`Structure/<ino-dialog> Playground smoke-test 1`] = `
<div id="root-inner">
  <div class="story-dialog">
    <ino-button class="open-dialog-btn hydrated"
                data-dialog-id="undefined"
    >
      <button class="button button__variant--filled"
              type="button"
      >
        <span class="button__label">
          Open Dialog
        </span>
      </button>
    </ino-button>
    <ino-dialog id="undefined"
                open="false"
                fullwidth="false"
                dismissible="false"
                attach-to=".story-dialog"
                class="hydrated"
    >
      <div class="ino-dialog-header">
        <div class="ino-dialog-title">
          <h3>
            Select your favourite characters
          </h3>
        </div>
        <ino-icon-button icon="close"
                         data-ino-dialog-action="close"
                         class="ino-icon-button--color-scheme-primary hydrated"
        >
          <button class="mdc-icon-button mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
                  type="button"
                  style="--mdc-ripple-fg-size:0px; --mdc-ripple-fg-scale:NaN; --mdc-ripple-left:0px; --mdc-ripple-top:0px;"
          >
            <div class="mdc-icon-button__ripple">
            </div>
            <span class="mdc-icon-button__icon">
              <ino-icon class="hydrated ino-icon--color-scheme-primary">
              </ino-icon>
            </span>
          </button>
        </ino-icon-button>
      </div>
      <div class="ino-dialog-content">
        <ino-segment-group value="2"
                           id="dense-segment-grp"
                           class="ino-segment-group hydrated"
        >
          <ino-segment-button dense
                              value="1"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Morty
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="2"
                              class="ino-segment-button hydrated"
                              checked
          >
            <button class="button button--dense button--active">
              Pickle Rick
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="3"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Squanchy
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="4"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Beth
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="5"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Jerry
            </button>
          </ino-segment-button>
          <ino-segment-button dense
                              value="6"
                              class="ino-segment-button hydrated"
          >
            <button class="button button--dense">
              Summer
            </button>
          </ino-segment-button>
        </ino-segment-group>
      </div>
      <div class="ino-dialog-footer">
        <ino-button icon="remove"
                    data-ino-dialog-action="cancel"
                    fill="outline"
                    color-scheme="secondary"
                    class="hydrated"
        >
          <button class="button button__variant--filled"
                  type="button"
          >
            <span class="button__label">
              Cancel
            </span>
          </button>
        </ino-button>
        <ino-button icon="mail"
                    data-ino-dialog-action="submit"
                    class="hydrated"
        >
          <button class="button button__variant--filled"
                  type="button"
          >
            <span class="button__label">
              Submit
            </span>
          </button>
        </ino-button>
      </div>
    </ino-dialog>
  </div>
</div>
`;
